buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
    }

    dependencies {
        classpath 'gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.12.0'
        classpath "gradle.plugin.com.github.jengelman.gradle.plugins:shadow:7.0.0"
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

apply plugin: 'application'
apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'maven-publish'
apply plugin: 'com.github.johnrengelman.shadow'

import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
import org.apache.tools.ant.taskdefs.condition.Os

apply plugin: 'base'
apply plugin: 'com.github.kt3k.coveralls'

group 'org.pub2tei'
version '0.2-SNAPSHOT'

description = """transform the myriad of scientific publisher XML into the same TEI XML format, common to GROBID"""

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


tasks.run.workingDir = rootProject.rootDir

sourceSets.main.resources {
    srcDirs = ["src/main/resources"];
}

processResources {
    filesMatching('./config/pub2tei.yml') {
        filter {
            it.replace('project.version', project.property('version_placeholder'))
        }
    }
}

task install(dependsOn: installShadowDist)

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation "org.hamcrest:hamcrest-all:1.3"
    testImplementation "org.easymock:easymock:3.5"

    implementation(group: 'xml-apis', name: 'xml-apis') {
        // otherwise xml-apis 2.0.1 will come from XOM and will result in
        // java.lang.ClassNotFoundException: org.w3c.dom.ElementTraversal
        //TODO: sort out this problem better
        version {
            strictly '1.4.01'
        }
    }

    //implementation "com.google.code.gson:gson:2.8.1"

    // GROBID
    implementation group: 'org.grobid', name: 'grobid-core', version: '0.7.3'

    implementation "io.dropwizard:dropwizard-core:1.3.29"
    implementation "io.dropwizard:dropwizard-assets:1.3.29"
    implementation "com.hubspot.dropwizard:dropwizard-guicier:1.3.5.2"
    implementation "io.dropwizard:dropwizard-testing:1.3.29"
    implementation "io.dropwizard:dropwizard-forms:1.3.29"
    implementation "io.dropwizard:dropwizard-client:1.3.29"
    implementation "io.dropwizard:dropwizard-auth:1.3.29"
    implementation "io.dropwizard.metrics:metrics-core:4.0.5"
    implementation "io.dropwizard.metrics:metrics-servlets:4.0.5"

    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'ch.qos.logback:logback-classic:1.2.3'

    implementation "com.rockymadden.stringmetric:stringmetric-core_2.10:0.27.3"

    //Parsing XML/JSON
    //implementation group: 'org.codehaus.woodstox', name: 'stax2-api', version: '4.0.0'
    //implementation group: 'org.codehaus.woodstox', name: 'woodstox-core-asl', version: '4.4.1'
    implementation "com.fasterxml.jackson.core:jackson-core:2.10.1"
    implementation "com.fasterxml.jackson.core:jackson-databind:2.10.1"
    implementation "com.fasterxml.jackson.module:jackson-module-afterburner:2.10.1"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.1"

//    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.3'
    implementation 'org.apache.commons:commons-collections4:4.1'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'commons-io:commons-io:2.6'
    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.20'
}

ext {
    // treating them separately, these jars will be flattened into grobid-core.jar on installing,
    // to avoid missing dependencies from the projects that include grobid-core (see 'jar' taskin grobid-core)
    localLibs = ['saxon9he.jar']
}

/*def libraries = ""
if (Os.isFamily(Os.FAMILY_MAC)) {
    if (Os.OS_ARCH.equals("aarch64")) {
        libraries = "${file("../grobid-home/lib/mac_arm-64").absolutePath}"    
    } else {
        libraries = "${file("../grobid-home/lib/mac-64").absolutePath}"
    }
} else if (Os.isFamily(Os.FAMILY_UNIX)) {
    libraries = "${file("../grobid-home/lib/lin-64/jep").absolutePath}:" +
        "${file("../grobid-home/lib/lin-64").absolutePath}:"
} else  {
    throw new RuntimeException("Unsupported platform!")
}*/

task mainJar(type: ShadowJar) {
    zip64 true
    from sourceSets.main.output

    from {
        project.configurations.runtimeClasspath.collect {
            it.isDirectory() ? [] : localLibs.contains(it.getName()) ? zipTree(it) : []
        }
    }
}

distributions {
    shadow {
        /*contents {
            from(new File(rootProject.rootDir, "data/config")) {
                into "data/config"
            }
        }*/
    }
}

shadowJar {
    archiveClassifier = 'onejar'
    mergeServiceFiles()
    zip64 true
    manifest {
        attributes 'Main-Class': 'org.pub2tei.main.Main'
    }
    //from sourceSets.main.output

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from {
        project.configurations.runtimeClasspath.collect {
            it.isDirectory() ? [] : localLibs.contains(it.getName()) ? zipTree(it) : []
        }
    }

    configurations = [project.configurations.runtimeClasspath]
}

jar {
    dependsOn mainJar
    enabled true
}

artifacts {
    archives jar
    archives shadowJar
}

//////////
// service
apply plugin: 'application'
application {
    mainClassName = 'org.pub2tei.service.ServiceApplication'

    run {
        def libraries = ""
        if (Os.isFamily(Os.FAMILY_MAC)) {
            if (Os.OS_ARCH.equals("aarch64")) {
                libraries = "${file("../grobid/grobid-home/lib/mac_arm-64").absolutePath}"
            } else {
                libraries = "${file("../grobid/grobid-home/lib/mac-64").absolutePath}"
            }
        } else if (Os.isFamily(Os.FAMILY_UNIX)) {
            libraries = "${file("../grobid/grobid-home/lib/lin-64/jep").absolutePath}:" +
                "${file("../grobid-home/lib/lin-64").absolutePath}:"
        } else  {
            throw new RuntimeException("Unsupported platform!")
        }

        if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
            jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
        }
        workingDir = rootProject.rootDir
        //def javaLibraryPath = "${System.getProperty('java.library.path')}:" + libraries
        //systemProperty "java.library.path", javaLibraryPath

        def javaLibraryPath = "${System.getProperty('java.library.path')}:" + libraries
        systemProperty "java.library.path", javaLibraryPath

        args = ['server', 'resources/config/config.yml']
    }
}

